refactor: remove swich case

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button class="btn calc__btn" data-number="4">4</button>
                 <button class="btn calc__btn" data-number="5">5</button>
                 <button class="btn calc__btn" data-number="6">6</button>
-                <button class="btn calc__btn calc__btn-yellow" data-action="substruct">-</button>
+                <button class="btn calc__btn calc__btn-yellow" data-action="substract">-</button>
               </div>
               <div class="calc__btns">
                 <button class="btn calc__btn" data-number="7">7</button>
